Clear the Sonar new-code smells raised by the merge
The shared project key's one-day new-code window counts every issue first
detected after the merge, so the gate failed on new-code maintainability
even though nothing here is new behaviour.

- Test classes: drop redundant public modifiers on JUnit 5 test methods
  and useless eq() matchers; remove unused imports.
- ListingCommandApi: remove unused Locale import and DAY_END_TIME field;
  express the per-date schedule map update as putIfAbsent/put instead of
  containsKey (same semantics: a cancelled day never overwrites).
- Hearing: extract the slot-duration null check into durationOrZero and
  build mergedDays with Stream.toList() (read-only downstream).
- ListingCommandHandler: reword a comment Sonar mistook for commented-out
  code.

Left as-is: constructor injection (S6813) and test parameterisation
(S5976), which are codebase-wide style choices rather than merge fallout.